--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -9,15 +9,12 @@ spring:
     config:
       server:
         git:
-          uri: https://github.com/nqqdegit/newsres.git
+          uri: https://github.com/nqqdegit/newsres
           searchPaths: repo #配置git仓库地址
           username: nqqdegit #访问git仓库的用户名
           password: Nqq65721371.. #访问git仓库的用户密码
         label: master #配置仓库的分支
  eureka:
-  instance:
-    hostname: ${spring.cloud.client.ipAddress}
-    instanceId: ${spring.cloud.client.ipAddress}:${server.port}
   client:
     serviceUrl:
       defaultZone: http://localhost:8888/eureka/
